--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ code {
     monospace;
 }
 
+.navbar {
+  align-items: flex-start;
+}
 
 .portal-nav ul li {
   margin: 30px 0px;
@@ -20,7 +23,7 @@ code {
 
 .portal-left-container {
   width: 300px;
-min-height: 1000px;
+  min-height: 100vh;
   background-color: white;
 }
 
@@ -96,9 +99,11 @@ min-height: 1000px;
 .white-background {
   background-color: white;
 }
+
 .active-nav div {
   color: black;
 }
+
 .backend-small-text * {
   font-size: 16px;
   color: black;
@@ -206,4 +211,7 @@ min-height: 1000px;
 
 #university-dropdown-container {
   transition: all 0.5s ease-out;
+}
+.change-pass {
+  bottom: 20px;
 }
